[project]
name = "rag-search"
version = "1.0.0"
description = "A CLI tool for searching through a toy dataset, powered by retrieval augmented generation (RAG)"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "google-genai>=2.4.0",
    "nltk==3.9.1",
    "numpy==2.3.3",
    "pillow>=12.2.0",
    "python-dotenv>=1.2.2",
    "sentence-transformers>=5.4.1",
]
